<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyESIEE</string>
    <string name="action_settings">Settings</string>
    <string name="action_update_db">Update database</string>
    <string name="archives">Archives</string>
    <string name="title_Absences">Absences</string>
    <string name="title_Assessments">Comments</string>
    <string name="title_Grades">Grades</string>
    <string name="title_Rooms">Rooms</string>
    <string name="title_Teachers">Teachers</string>
    <string name="tableau_noir">Blackboard</string>
    <string name="tableau_blanc">Whiteboard</string>
    <string name="salle_it">Computer room</string>
    <string name="salle_elec">Electronics lab</string>
    <string name="salle_banal">Classroom</string>
    <string name="room_s">Small room</string>
    <string name="room_not_found">404 - Room not found =(</string>
    <string name="room_m">Medium room</string>
    <string name="room_l">Large room</string>
    <string name="recherche_avancee">Advanced search</string>

    <string name="projecteur">Projector</string>
    <string name="prof_not_found">404 - Teacher not found =(</string>
    <string name="occupee">In use</string>
    <string name="no_prof_name">Which teacher should I look for ?</string>
    <string name="no_credit">No ECTS</string>
    <string name="no_connection_warning_db">No Internet connection. The database may be outdated...</string>
    <string name="noData">No data to display</string>
    <string name="navigation_drawer_open">Open the navigation menu</string>
    <string name="navigation_drawer_close">Close the navigation menu</string>
    <string name="minutes_abbr">min</string>
    <string name="mdp">Password</string>
    <string name="login">Login</string>
    <string name="loading">Loading ...</string>
    <string name="libre">Free</string>
    <string name="le_date">On</string>
    <string name="last_printed_data">Last displayed data</string>
    <string name="imprimante">Printer</string>
    <string name="hint_nomSalle">Room number</string>
    <string name="fetching_grades_old">Fetching grades from the archives...</string>
    <string name="fetching_grades">Fetching current year\'s grades...</string>
    <string name="fetching_assesments">Fetching current year\'s comments...</string>
    <string name="fetching_absences">Fetching current year\'s absences...</string>
    <string name="fetching_assesments_old">Fetching comments from the archives...</string>
    <string name="fetching_absences_old">Fetching absences from the archives...</string>
    <string name="edit_aurion_ids">Edit my Aurion ID\'s</string>
    <string name="disabled_categ">No room type</string>
    <string name="de_date">from</string>
    <string name="db_update_fail">Database update fail =(</string>
    <string name="db_update">The database is being updated...</string>
    <string name="db_up_to_date">The database is now up to date</string>
    <string name="currentYear">Current year</string>
    <string name="credits_plural">ECTS</string>
    <string name="credit_sing">ECTS</string>
    <string name="connexion">Logging in Aurion</string>
    <string name="chercher">Search</string>
    <string name="cancel">Cancel</string>
    <string name="aurion_id_stored">Your Aurion ID\'s are stored, you can edit them through the options</string>
    <string name="aurion_id_deleted">Your Aurion ID\'s have been deleted from the device</string>
    <string name="title_activity_absences">Absences</string>
    <string name="title_activity_appreciations">Comments</string>
    <string name="title_activity_base_drawer"></string>
    <string name="title_activity_fiche_salle">Room\'s card</string>
    <string name="title_activity_notes">Grades</string>
    <string name="title_activity_rech_prof">Teachers</string>
    <string name="triple_dots">...</string>
    <string name="with">with</string>
    <string name="hint_nomProf">Teacher name</string>
    <string name="contribuer">Contribute</string>
    <string name="hint_email">E-mail (optional)</string>
    <string name="hint_contribution">Bug? Mistake? Suggestion? Tell us about it!</string>
    <string name="no_connection_warning_contrib">No Internet connection. Be sure to be connected to Internet to send your contribution.</string>
    <string name="contrib_sent">Your contribution has been sent, thank you very much :D</string>
    <string name="title_activity_rech_salle">Rooms</string>
    <string name="wrongIDs">Connexion to Aurion failed. Are your ID\'s correct?</string>
    <string name="title_activity_about">About</string>
    <string name="about_text"><Data><![CDATA[<p>MyESIEE have been developed in 2015 for a project at ESIEE Paris by 4 3rd-year students:</p>APRAHAMIAN Kaïl<br/>DUPONT Léo<br/>KUHN Johann<br/>HOUACINE Mehdi<br/><p>To see the Web version of this project, please go to <a href=\'https://mvx2.esiee.fr/\'>https://mvx2.esiee.fr</a></p><p>Please don\'t hesitate to contact us through the Contribute button ;-)</p>]]></Data></string>
    <string name="app_update">Application version:</string>
    <string name="db_last_update">Onlien database version:</string>
    <string name="no_connection_warning_about">No Internet connection =(</string>
    <string name="afficher_occupees" >Display occupied rooms</string>
    <string name="doesnt_exist">doesn\'t exist in the device\'s DB, please try to update the local DB or to report this bug</string>
</resources>