<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/secondary_text"
        android:text="@string/recherche_avancee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/epi"
            android:layout_weight=".5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:entries="@array/epis" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etage"
            android:layout_weight=".5"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:entries="@array/etages" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableau_blanc"
            android:id="@+id/tableau_blanc"
            android:layout_margin="@dimen/dialog_search_checkboxes" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableau_noir"
            android:id="@+id/tableau_noir"
            android:layout_below="@id/tableau_blanc"
            android:layout_margin="@dimen/dialog_search_checkboxes" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projecteur"
            android:id="@+id/projecteur"
            android:layout_toRightOf="@id/tableau_blanc"
            android:layout_margin="@dimen/dialog_search_checkboxes" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imprimante"
            android:id="@+id/imprimante"
            android:layout_below="@id/projecteur"
            android:layout_toRightOf="@id/tableau_blanc"
            android:layout_margin="@dimen/dialog_search_checkboxes" />

    </RelativeLayout>

</LinearLayout>