<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/secondary_text"
        android:text="@string/connexion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/login"
            android:inputType="textNoSuggestions"
            android:nextFocusForward="@+id/mdp"
            android:nextFocusDown="@+id/mdp"
            />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:nextFocusUp="@+id/login"
            />

    </LinearLayout>

</LinearLayout>