<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="20dp"
        android:textColor="@color/secondary_text"
        android:text="@string/contribuer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical" >

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/type"
            android:entries="@array/contrib_types"
            android:nextFocusForward="@+id/email"
            android:nextFocusDown="@+id/email"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/contenu"
            android:nextFocusDown="@+id/contenu"
            android:nextFocusUp="@+id/type" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:ems="10"
            android:hint="@string/hint_contribution"
            android:id="@+id/contenu"
            android:layout_gravity="center_horizontal"
            android:nextFocusUp="@+id/email" />


    </LinearLayout>

</LinearLayout>