<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="themeute_entertainment.eroom.About" >

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">

        <!-- Header -->
        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:elevation="8dp"
            android:src="@drawable/logomyesieeflat"
            android:background="@color/primary" />

        <!-- Données -->

        <TextView
            android:id="@+id/about_text"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/primary_text"
            android:text="@string/about_text" />

        <TextView
            android:id="@+id/dateAppli"
            android:layout_above="@+id/dateAppli_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:textSize="12dp"
            android:textColor="@color/windowBackground"
            android:text="@string/app_update" />

        <TextView
            android:id="@+id/dateAppli_value"
            android:layout_above="@+id/dateDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/windowBackground"
            android:text="0.4 - 19/06/2015" />

        <TextView
            android:id="@+id/dateDB"
            android:layout_above="@+id/dateDB_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:textStyle="italic"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/windowBackground"
            android:text="@string/db_last_update" />

        <TextView
            android:id="@+id/dateDB_value"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/windowBackground"
            android:text="19/06/2015" />

    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
             this as a sliding drawer on the left side for left-to-right
             languages and on the right side for right-to-left languages.
             If you're not building against API 17 or higher, use
             android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="themeute_entertainment.eroom.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>